Fix alignment of views

--- a/src/views/Contact.module.css
+++ b/src/views/Contact.module.css
@@ -1,5 +1,6 @@
 .root {
   text-align: center;
+  height: 100%;
 }
 
 .form {
