--- a/src/views/Home.module.css
+++ b/src/views/Home.module.css
@@ -1,3 +1,4 @@
 .root {
   text-align: center;
+  height: 100%;
 }
